--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,24 +5,47 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.grid-container {
-    width: 1140px;
-    margin: 82px auto 0 auto;
-    display: grid;
-    grid-template-columns: repeat(4, 240px);
-    grid-template-rows: repeat(2, 260px);
-    grid-auto-rows: 260px;
-    gap: 60px;
+.grid-elem {
+    //height: 50px;
+    background-color: #E2725B;
+    color: #fff;
+    line-height: 50px;
+    text-align: center;
+    font-size: 26px;
+    border: 2px solid #3b3b3b;
+    border-radius: 4px;
+
 }
 
-.news-item {
-    &__img {
-        width: 100%;
-    }
-    &__descr {
-        margin-top: 15px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 16px;
-    }
+.grid-container {
+    display: grid;
+    //создание колонок
+    //grid-template-columns: 200px 200px 200px;
+    //создание строк
+    //grid-template-rows: 60px 150px 60px;
+    grid-template: 60px 150px 60px / 200px 200px 200px;
+    gap: 20px;
+
 }
+
+//.grid-container {
+//    width: 1140px;
+//    margin: 82px auto 0 auto;
+//    display: grid;
+//    grid-template-columns: repeat(4, 240px);
+//    grid-template-rows: repeat(2, 260px);
+//    grid-auto-rows: 260px;
+//    gap: 60px;
+//}
+
+//.news-item {
+//    &__img {
+//        width: 100%;
+//    }
+//    &__descr {
+//        margin-top: 15px;
+//        font-weight: 500;
+//        font-size: 14px;
+//        line-height: 16px;
+//    }
+//}
