--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,9 +8,10 @@
 
 .grid-container {
     display: grid;
-    width: 700px;
-    height: 700px;
-    grid-template-columns: 1fr 1fr 1fr;
+    width: 600px;
+    height: 600px;
+    grid-template-columns: repeat(3, 1fr) 20px;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 .grid-elem {
     //height: 50px;
@@ -20,7 +21,7 @@
     text-align: center;
     font-size: 26px;
     border: 2px solid #3b3b3b;
-    border-radius: 4px;
+    border-radius: 8px;
 
 }
 
