--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,25 +5,57 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.news-item__img {
+    width: 100%;
+    margin-bottom: 15px;
+}
 
 .grid-container {
+    width: 1140px;
+    margin: 82px auto 0;
     display: grid;
-    width: 600px;
-    height: 600px;
-    grid-template-columns: repeat(3, 1fr) 20px;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 240px);
+    grid-template-rows: repeat(2, 260px);
+    grid-auto-rows: 260px;
+    gap: 60px;
 }
-.grid-elem {
-    //height: 50px;
-    background-color: #E2725B;
-    color: #fff;
-    line-height: 50px;
-    text-align: center;
-    font-size: 26px;
-    border: 2px solid #3b3b3b;
-    border-radius: 8px;
 
+.news-item__descr {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: left;
+    color: #000000;
 }
+
+
+
+
+
+
+
+
+
+//.grid-container {
+//    display: grid;
+//    width: 600px;
+//    height: 600px;
+//    grid-template-columns: repeat(3, 1fr);
+//    grid-template-rows: repeat(3 , 200px);
+//    grid-auto-rows: 200px;
+//    grid-auto-columns: 200px;
+//}
+//.grid-elem {
+//    //height: 50px;
+//    background-color: #E2725B;
+//    color: #fff;
+//    line-height: 50px;
+//    text-align: center;
+//    font-size: 26px;
+//    border: 2px solid #3b3b3b;
+//    border-radius: 8px;
+
+//}
 
 //.grid-container {
     //display: grid;
