--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,31 +2,58 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    
 }
 
-.news-item__img {
-    width: 100%;
-    margin-bottom: 15px;
-}
+
 
 .grid-container {
-    width: 1140px;
-    margin: 82px auto 0;
     display: grid;
-    grid-template-columns: repeat(4, 240px);
-    grid-template-rows: repeat(2, 260px);
-    grid-auto-rows: 260px;
-    gap: 60px;
+    grid-template-columns: repeat(3, minmax(100px, 300px));
+    grid-template-rows: repeat(3, minmax(100px, auto));
+    grid-auto-rows: minmax(100px, auto);
+
 }
 
-.news-item__descr {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    text-align: left;
-    color: #000000;
+.grid-elem {
+
+    background-color: #E2725B;
+    color: #fff;
+    line-height: 50px;
+    text-align: center;
+    font-size: 26px;
+    border: 4px solid #3b3b3b;
+    border-radius: 12px;
+
 }
+
+
+
+
+
+
+//.news-item__img {
+//    width: 100%;
+//    margin-bottom: 15px;
+//}
+
+//.grid-container {
+//    width: 1140px;
+//    margin: 82px auto 0;
+//    display: grid;
+//    grid-template-columns: repeat(4, 240px);
+//    grid-template-rows: repeat(2, 260px);
+//    grid-auto-rows: 260px;
+//    gap: 60px;
+//}
+
+//.news-item__descr {
+//    font-style: normal;
+//    font-weight: 500;
+//    font-size: 14px;
+//    text-align: left;
+//    color: #000000;
+//}
 
 
 
@@ -58,13 +85,13 @@
 //}
 
 //.grid-container {
-    //display: grid;
-    //создание колонок
-    //grid-template-columns: 200px 200px 200px;
-    //создание строк
-    //grid-template-rows: 60px 150px 60px;
-    //grid-template: 60px 150px 60px / 200px 200px 200px;
-    //gap: 20px;
+//display: grid;
+//создание колонок
+//grid-template-columns: 200px 200px 200px;
+//создание строк
+//grid-template-rows: 60px 150px 60px;
+//grid-template: 60px 150px 60px / 200px 200px 200px;
+//gap: 20px;
 
 //}
 
