--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,10 +9,10 @@
 
 .grid-container {
     display: grid;
-    //grid-template-columns: repeat(3, minmax(150px, 300px));
-    //grid-template-rows: repeat(3, minmax(100px, auto));
-    grid-template-columns: [col1-s] 150px [col2-s] 150px [col3-s] 150px;
-    grid-template-rows: [row1-s] 150px [row2-s] 150px [row3-s] 150px [row4-s];
+    grid-template-columns: repeat(3, minmax(150px, 300px));
+    grid-template-rows: repeat(3, minmax(100px, auto));
+    //grid-template-columns: [col1-s] 150px [col2-s] 150px [col3-s] 150px;
+    //grid-template-rows: [row1-s] 150px [row2-s] 150px [row3-s] 150px [row4-s];
     grid-auto-rows: minmax(100px, auto);
     gap: 10px;
     
@@ -29,18 +29,40 @@
     border: 4px solid #3b3b3b;
     border-radius: 12px;
 }
-#first {
-    grid-column: col1-s / col3-s;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//.grid-container {
+//    display: grid;
+    //grid-template-columns: [col1-s] 150px [col2-s] 150px [col3-s] 150px;
+    //grid-template-rows: [row1-s] 150px [row2-s] 150px [row3-s] 150px [row4-s];
+//}
+//#first {
+//    grid-column: col1-s / col3-s;
     
-}
-#second {
-    grid-row: row3-s;    
-    grid-column: col2-s;
-}
-#third {
-    grid-row: row2-s / row4-s;
-    grid-column: col3-s;
-}
+//}
+//#second {
+//    grid-row: row3-s;    
+//    grid-column: col2-s;
+//}
+//#third {
+//    grid-row: row2-s / row4-s;
+//    grid-column: col3-s;
+//}
 
 
 
@@ -69,13 +91,6 @@
 //    text-align: left;
 //    color: #000000;
 //}
-
-
-
-
-
-
-
 
 
 //.grid-container {
