--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,35 +8,51 @@
 
 
 .grid-container {
-    //height: 1000px;
     display: grid;
     grid-template-columns: repeat(3, minmax(150px, 300px));
     grid-template-rows: repeat(3, minmax(100px, auto));
-    //grid-template-columns: [col1-s] 150px [col2-s] 150px [col3-s] 150px;
-    //grid-template-rows: [row1-s] 150px [row2-s] 150px [row3-s] 150px [row4-s];
     grid-auto-rows: minmax(100px, auto);
     gap: 10px;
-
-    justify-content: center;
-
-    //align-items: center;
-    //justify-items: center;
-
-    //place-content: justify-content + align-content;
-    //place-content: space-around space-around ;
-
-    //place-items: justify-items + align-items;
-    //place-items: center center;
+    grid-template-areas:
+        "header header header"
+        "blog blog message"
+        "footer footer footer";
 
 }
 
-#first {
-    //align-self: center;
-    //justify-self: center;
-
-    //place-self: justify-self + align-self;
-    //place-self: center end;
+@media (max-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, minmax(100px, auto));
+        grid-template-areas:
+            "header header"
+            "blog blog"
+            "message message"
+            "footer footer";
+    }
 }
+
+
+#header {
+    grid-area: header;
+    //header-start / header-end
+}
+
+#blog {
+    grid-area: blog;
+}
+
+#message {
+    grid-area: message;
+}
+
+#footer {
+    grid-area: footer;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
 
 .grid-elem {
 
@@ -45,125 +61,10 @@
     line-height: 50px;
     text-align: center;
     font-size: 26px;
-    border: 4px solid #3b3b3b;
-    border-radius: 12px;
+    border: 2px solid #3b3b3b;
+    border-radius: 4px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-//.grid-container {
-//    display: grid;
-//grid-template-columns: [col1-s] 150px [col2-s] 150px [col3-s] 150px;
-//grid-template-rows: [row1-s] 150px [row2-s] 150px [row3-s] 150px [row4-s];
-//}
-//#first {
-//    grid-column: col1-s / col3-s;
-
-//}
-//#second {
-//    grid-row: row3-s;    
-//    grid-column: col2-s;
-//}
-//#third {
-//    grid-row: row2-s / row4-s;
-//    grid-column: col3-s;
-//}
-
-
-
-
-
-
-//.news-item__img {
-//    width: 100%;
-//    margin-bottom: 15px;
-//}
-
-//.grid-container {
-//    width: 1140px;
-//    margin: 82px auto 0;
-//    display: grid;
-//    grid-template-columns: repeat(4, 240px);
-//    grid-template-rows: repeat(2, 260px);
-//    grid-auto-rows: 260px;
-//    gap: 60px;
-//}
-
-//.news-item__descr {
-//    font-style: normal;
-//    font-weight: 500;
-//    font-size: 14px;
-//    text-align: left;
-//    color: #000000;
-//}
-
-
-//.grid-container {
-//    display: grid;
-//    width: 600px;
-//    height: 600px;
-//    grid-template-columns: repeat(3, 1fr);
-//    grid-template-rows: repeat(3 , 200px);
-//    grid-auto-rows: 200px;
-//    grid-auto-columns: 200px;
-//}
-//.grid-elem {
-//    //height: 50px;
-//    background-color: #E2725B;
-//    color: #fff;
-//    line-height: 50px;
-//    text-align: center;
-//    font-size: 26px;
-//    border: 2px solid #3b3b3b;
-//    border-radius: 8px;
-
-//}
-
-//.grid-container {
-//display: grid;
-//создание колонок
-//grid-template-columns: 200px 200px 200px;
-//создание строк
-//grid-template-rows: 60px 150px 60px;
-//grid-template: 60px 150px 60px / 200px 200px 200px;
-//gap: 20px;
-
-//}
-
-//.grid-container {
-//    width: 1140px;
-//    margin: 82px auto 0 auto;
-//    display: grid;
-//    grid-template-columns: repeat(4, 240px);
-//    grid-template-rows: repeat(2, 260px);
-//    grid-auto-rows: 260px;
-//    gap: 60px;
-//}
-
-//.news-item {
-//    &__img {
-//        width: 100%;
-//    }
-//    &__descr {
-//        margin-top: 15px;
-//        font-weight: 500;
-//        font-size: 14px;
-//        line-height: 16px;
-//    }
-//}
+.orange {
+    background-color: yellow;
+}
